fix(quick-action-card): hyphen on safari 3

--- a/express/blocks/quick-action-card/quick-action-card.css
+++ b/express/blocks/quick-action-card/quick-action-card.css
@@ -153,15 +153,11 @@ main .quick-action-card .carousel-platform svg {
 }
 
 main .quick-action-card .carousel-platform span {
-  display: flex;
-  justify-content: center;
+  display: block;
   font-size: 16px;
   text-align: center;
   max-width: 66px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
   -webkit-hyphens: auto;
-  -moz-hyphens: auto;
   hyphens: auto;
 }
 
